MGRENTITLE-39 Implement support for upgrade operation
- Add upgrade parameter to install request
- Remove skipped application flows
- Implement new flow-engine API
- Refactor installation flow to load data once and provide application flows dynamically
- Fix exception handler for new flow structure (now returns only failed stage instead of full execution)
- Adjust flow execution report names (add stage types for readability)
- Fix most of failed unit tests (stage context parameters now mostly belong to flow parameters)
- Remove plantUML diagrams
- Fix integration tests after refactoring
- Add KeycloakAuthResourceUpdater stage